# delixon-qiloback

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-FAQ.md  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: enforce-branch-flow.yml  npm-publish.yml  pip-publish.yml
docs/: README.md  getting-started.md
npm/cli/: LICENSE  README.md  package.json
npm/cli/scripts/: postinstall.js
pip/cli/: README.md  pyproject.toml
pip/cli/qiloback_wrapper/: __init__.py  __main__.py  cli.py
