[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "qiloback-cli"
version = "0.5.1"
description = "QiloBack CLI — backend manufacturing platform. Generate FastAPI backends from a YAML DSL. Source-available (FSL-1.1-ALv2)."
readme = "README.md"
license = "LicenseRef-FSL-1.1-ALv2"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Delixon Labs", email = "hello@delixon.dev"},
]
keywords = [
    "qiloback",
    "cli",
    "developer-tools",
    "backend",
    "fastapi",
    "dsl",
    "code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://qiloback.dev"
Repository = "https://github.com/delixon-labs/delixon-qiloback"
Issues = "https://github.com/delixon-labs/delixon-qiloback/issues"

[project.scripts]
qiloback = "qiloback_wrapper.cli:main"
qb = "qiloback_wrapper.cli:main"
